docs/4.x/cloudwatch_log_group.md
---
permalink: /cloudwatch_log_group/
---

# cloudwatch_log_group

`cloudwatch_log_group` represents the `aws_cloudwatch_log_group` Terraform resource.



This package contains functions and utilities for setting up the resource using Jsonnet code.


## Index

* [`fn new()`](#fn-new)
* [`fn newAttrs()`](#fn-newattrs)
* [`fn withKmsKeyId()`](#fn-withkmskeyid)
* [`fn withName()`](#fn-withname)
* [`fn withNamePrefix()`](#fn-withnameprefix)
* [`fn withRetentionInDays()`](#fn-withretentionindays)
* [`fn withSkipDestroy()`](#fn-withskipdestroy)
* [`fn withTags()`](#fn-withtags)
* [`fn withTagsAll()`](#fn-withtagsall)

## Fields

### fn new

```ts
new()
```


`aws.cloudwatch_log_group.new` injects a new `aws_cloudwatch_log_group` Terraform `resource`
block into the root module document.

Additionally, this inserts a private function into the `_ref` attribute that generates references to attributes of the
resource. For example, if you added a new instance to the root using:

    # arguments omitted for brevity
    aws.cloudwatch_log_group.new('some_id')

You can get the reference to the `id` field of the created `aws.cloudwatch_log_group` using the reference:

    $._ref.aws_cloudwatch_log_group.some_id.get('id')

This is the same as directly entering `"${ aws_cloudwatch_log_group.some_id.id }"` as the value.

NOTE: if you are chaining multiple resources together in a merge operation, you may not be able to use `super`, `self`,
or `$` to refer to the root object. Instead, make an explicit outer object using `local`.

**Args**:
  - `resourceLabel` (`string`): The name label of the block.
  - `kms_key_id` (`string`):  When `null`, the `kms_key_id` field will be omitted from the resulting object.
  - `name` (`string`):  When `null`, the `name` field will be omitted from the resulting object.
  - `name_prefix` (`string`):  When `null`, the `name_prefix` field will be omitted from the resulting object.
  - `retention_in_days` (`number`):  When `null`, the `retention_in_days` field will be omitted from the resulting object.
  - `skip_destroy` (`bool`):  When `null`, the `skip_destroy` field will be omitted from the resulting object.
  - `tags` (`obj`):  When `null`, the `tags` field will be omitted from the resulting object.
  - `tags_all` (`obj`):  When `null`, the `tags_all` field will be omitted from the resulting object.

**Returns**:
- A mixin object that injects the new resource into the root Terraform configuration.


### fn newAttrs

```ts
newAttrs()
```


`aws.cloudwatch_log_group.newAttrs` constructs a new object with attributes and blocks configured for the `cloudwatch_log_group`
Terraform resource.

Unlike [aws.cloudwatch_log_group.new](#fn-cloudwatchloggroupnew), this function will not inject the `resource`
block into the root Terraform document. Instead, this must be passed in as the `attrs` argument for the
[tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) function to build a complete block.

This is most useful when you need to preprocess the attributes with functions, conditional, or looping logic prior to
injecting into a complete block.

**Args**:
  - `kms_key_id` (`string`):  When `null`, the `kms_key_id` field will be omitted from the resulting object.
  - `name` (`string`):  When `null`, the `name` field will be omitted from the resulting object.
  - `name_prefix` (`string`):  When `null`, the `name_prefix` field will be omitted from the resulting object.
  - `retention_in_days` (`number`):  When `null`, the `retention_in_days` field will be omitted from the resulting object.
  - `skip_destroy` (`bool`):  When `null`, the `skip_destroy` field will be omitted from the resulting object.
  - `tags` (`obj`):  When `null`, the `tags` field will be omitted from the resulting object.
  - `tags_all` (`obj`):  When `null`, the `tags_all` field will be omitted from the resulting object.

**Returns**:
  - An attribute object that can be used with [tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) to construct a new `cloudwatch_log_group` resource into the root Terraform configuration.


### fn withKmsKeyId

```ts
withKmsKeyId()
```

`aws.cloudwatch_log_group.withKmsKeyId` constructs a mixin object that can be merged into the `cloudwatch_log_group`
Terraform resource block to set or update the kms_key_id field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `kms_key_id` field.


### fn withName

```ts
withName()
```

`aws.cloudwatch_log_group.withName` constructs a mixin object that can be merged into the `cloudwatch_log_group`
Terraform resource block to set or update the name field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `name` field.


### fn withNamePrefix

```ts
withNamePrefix()
```

`aws.cloudwatch_log_group.withNamePrefix` constructs a mixin object that can be merged into the `cloudwatch_log_group`
Terraform resource block to set or update the name_prefix field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `name_prefix` field.


### fn withRetentionInDays

```ts
withRetentionInDays()
```

`aws.cloudwatch_log_group.withRetentionInDays` constructs a mixin object that can be merged into the `cloudwatch_log_group`
Terraform resource block to set or update the retention_in_days field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `retention_in_days` field.


### fn withSkipDestroy

```ts
withSkipDestroy()
```

`aws.cloudwatch_log_group.withSkipDestroy` constructs a mixin object that can be merged into the `cloudwatch_log_group`
Terraform resource block to set or update the skip_destroy field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `skip_destroy` field.


### fn withTags

```ts
withTags()
```

`aws.cloudwatch_log_group.withTags` constructs a mixin object that can be merged into the `cloudwatch_log_group`
Terraform resource block to set or update the tags field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `tags` field.


### fn withTagsAll

```ts
withTagsAll()
```

`aws.cloudwatch_log_group.withTagsAll` constructs a mixin object that can be merged into the `cloudwatch_log_group`
Terraform resource block to set or update the tags_all field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `tags_all` field.
